--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,3 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
-
-/* ************************************************************************* */
 body,
 html {
   margin: 0;
@@ -52,24 +8,22 @@ html {
   font-family: Arial, sans-serif;
 }
 
-.rounded-rectangle {
-  background-color: transparent;
-  border: 1px solid #feece2;
-  border-radius: 70px;
-  padding: 10px;
-  margin: 13px;
-  box-shadow: 0 4px 8px black;
-  transition: "transform 0.3s ease";
-}
-
-.rounded-rectangle:hover {
-  transform: scale(1.1); /* Scale up by 10% on hover */
-}
-
+/* needed */
 .projects {
   transition: "transform 0.3s ease";
 }
 
 .projects:hover {
   transform: scale(1.1); /* Scale up by 10% on hover */
+}
+
+.box-border-styling {
+  background-color: #fbf8f5;
+  border-radius: 15px;
+  padding: 42px;
+  margin: 10px;
+  box-shadow: 0 4px 8px #895737;
+  flex: 1;
+  min-width: 300px;
+  height: auto;
 }
